fixed date-theme layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -1184,7 +1184,7 @@ font-family: 'PT Sans', sans-serif;
 }
 
 .blog-date-theme{
-  width: 170px;
+  width: 220px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
